test/bench/error/syntax_error_bench.lua
-- Benchmark file with syntax error
local measure = require('measure')

local bench = measure.describe("syntax_error"
-- Missing closing parenthesis to cause syntax error
